# pde_fem

./: .gitignore  CMakeLists.txt
data/: problem.json  square.vtk
include/: element.h  fem_simulation.h  generator.h  mesh.h  node.h  output_writer.h
include/assemblers/: assembler.h  helmholtz_assembler.h  poisson_assembler.h
include/solvers/: conjugate_gradient.h  solver.h
src/: fem_simulation.cpp  generator.cpp  main.cpp  output_writer.cpp
src/assemblers/: helmholtz_assembler.cpp  poisson_assembler.cpp
src/solvers/: conjugate_gradient.cpp
